<resources>
    <string name="app_name">AppRestaurant</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnVolverLogin">Volver al Login</string>
    <string name="tituloRegistro">Registro de Usuario Nuevo</string>
    <string name="txtIngresarUsuario">Ingresa tu nombre de Usuario</string>
    <string name="txtIngresarPassword">Ingresa tu Password</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Restaurant Sr. Limon</string>
    <string name="nav_header_subtitle">Usuario: </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_pagar">Pagar</string>
    <string name="btn_agregar_producto">Agregar</string>

    <string name="hint_fecha_reserva">Fecha de Reserva</string>
    <string name="hint_hora_reserva">Hora de Reserva</string>

    <string name="menu_Menu">Menu</string>
    <string name="menu_Reservas">Reservas</string>
    <string name="menu_Pedidos">Pedidos</string>
    <string name="menu_LogOut">Log Out</string>

    <string name="btn_formReserva">Registrar Reserva</string>
    <string name="btn_wallet">Wallet (QR)</string>
    <string name="btn_efectivo">Efectivo</string>
    <string name="btn_tarjeta">Tarjeta</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_enviar_pedido">Confirmar Pedido</string>

    <string name="tab_header_id">ID</string>
    <string name="tab_header_mesa">Mesa</string>
    <string name="tab_header_plato">Plato</string>
    <string name="tab_header_cantidad">Cantidad</string>
    <string name="tab_header_listo">Estado</string>
    <string name="tab_header_accion">Accion</string>
    <string name="tab_header_fecha">Fecha</string>
    <string name="tab_header_hora">Hora</string>
    <string name="tab_header_cliente">Cliente</string>
    <string name="tab_header_precio">Precio</string>

    <string name="txtv_registro_fecha">Fecha</string>
    <string name="txtv_registro_hora">Hora</string>
    <string name="txtv_registro_mesa">Mesa</string>
    <string name="txtv_registro_cliente">Cliente</string>
    <string name="btn_Registrar">Registrar</string>

    <string name="titulo_form_reserva">Registro de Reserva</string>
    <string name="titulo_wallet">Wallet (QR)</string>
    <string name="titulo_confirmarPedido">Confirmación de Pedido</string>

    <string name="switch_salon">Salon</string>
    <string name="switch_Llevar">Para Llevar</string>

    <string name="txv_total">Total: </string>

    <string-array name="mesas">
        <item>Selecciona Mesa...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>