<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/iconmenu"
            android:title="@string/menu_Menu" />
        <item
            android:id="@+id/nav_reservas"
            android:icon="@drawable/iconreservas"
            android:title="@string/menu_Reservas" />

        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/icono_pedidos"
            android:title="@string/menu_Pedidos" />
    </group>

    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/iconlogout"
            android:title="@string/menu_LogOut"/>
    </group>

</menu>