<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">

    <fragment
        android:id="@+id/nav_menu"
        android:name="idat.apprestaurant.ui.menu.MenuFragment"
        android:label="@string/menu_Menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_reservas"
        android:name="idat.apprestaurant.ui.reservas.ReservasFragment"
        android:label="@string/menu_Reservas"
        tools:layout="@layout/fragment_reservas" />

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="idat.apprestaurant.ui.pedidos.PedidosFragment"
        android:label="@string/menu_Pedidos"
        tools:layout="@layout/fragment_pedidos" />
</navigation>