<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroReservaActivity">

    <TextView
        android:id="@+id/txv_registro_fecha"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:text="@string/txtv_registro_fecha"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/txv_registro_hora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <EditText
        android:id="@+id/edtCliente"
        android:layout_width="228dp"
        android:layout_height="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txv_registro_cliente" />

    <EditText
        android:id="@+id/edtFecha"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/hint_fecha_reserva"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/edtHora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txv_registro_fecha" />

    <EditText
        android:id="@+id/edtHora"
        android:layout_width="212dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/hint_hora_reserva"
        android:inputType="time"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/edtMesa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/txv_registro_hora" />

    <TextView
        android:id="@+id/txv_registro_cliente"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="300dp"
        android:text="@string/txtv_registro_cliente"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/edtMesa"
        android:entries="@array/mesas"
        android:layout_width="214dp"
        android:layout_height="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/edtCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txv_registro_mesa" />

    <TextView
        android:id="@+id/txv_registro_mesa"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtv_registro_mesa"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/txv_registro_cliente"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_registro_hora"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="36dp"
        android:text="@string/txtv_registro_hora"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/txv_registro_mesa"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_grabar_reserva"
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:text="@string/btn_Registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_form_reserva"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

</androidx.constraintlayout.widget.ConstraintLayout>